--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/jest": "^20.0.7",
     "@types/node": "^8.0.20",
     "jest": "^20.0.4",
+    "leakage": "^0.3.0",
     "standard-version": "^4.2.0",
     "ts-jest": "^20.0.10",
     "typescript": "^2.4.2"
